--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <section>
             <h2>Our Team</h2>
 
-            <img src="./images/img-3.jpg" alt="Mark Guerrero" />
+            <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260" />
             <h2>Mark Guerrero</h2>
             <p>Product Designer</p>
 
-            <img src="./images/img-2.jpg" alt="Tom Ford" />
+            <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260" />
             <h2>Tom Ford</h2>
             <p>Frontend Developer</p>
 
-            <img src="./images/img-1.jpg" alt="Camila Garcia" />
+            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260" />
             <h2>Camila Garcia</h2>
             <p>Marketing</p>
 
-            <img src="./images/img.jpg" alt="Daniel Wilson" />
+            <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260" />
             <h2>Daniel Wilson</h2>
             <p>UI Designer</p>
         </section>
