--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio:Effective Solutions for Your Business</title>
 </head>
 
 <body>
@@ -18,8 +18,10 @@
                 <li>Contacts</li>
             </ul>
         </nav>
-        <p>info@devstudio.com</p>
-        <p>+11 (000) 111-11-11</p>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
     </header>
 
     <main>
@@ -29,35 +31,54 @@
         </section>
 
         <section>
-            <h2>Strategy</h2>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            <h2>Punctuality</h2>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            <h2>Diligence</h2>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-            </p>
-            <h2>Technologies</h2>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <ul>
+                <li>
+                    <h2>Strategy</h2>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
+                </li>
+            </ul>
         </section>
 
         <section>
             <h2>Our Team</h2>
-
-            <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h2>Mark Guerrero</h2>
-            <p>Product Designer</p>
-
-            <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260" />
-            <h2>Tom Ford</h2>
-            <p>Frontend Developer</p>
-
-            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h2>Camila Garcia</h2>
-            <p>Marketing</p>
-
-            <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h2>Daniel Wilson</h2>
-            <p>UI Designer</p>
+            <ul>
+                <li>
+                    <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260" />
+                    <h2>Mark Guerrero</h2>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260" />
+                    <h2>Tom Ford</h2>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260" />
+                    <h2>Camila Garcia</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260" />
+                    <h2>Daniel Wilson</h2>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
 
