--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>Studio</li>
                 <li>Portfolio</li>
@@ -40,22 +40,30 @@
             <h2>Our Philosophy</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h3>
+                        <a href="">Strategy</a>
+                    </h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3>
+                        <a href="">Punctuality</a>
+                    </h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3>
+                        <a href="">Diligence</a>
+                    </h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3>
+                        <a href="">Technologies</a>
+                    </h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
@@ -90,7 +98,7 @@
     </main>
 
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
