--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li>
+                    <a href="">Studio</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Contacts</a>
+                </li>
             </ul>
         </nav>
         <address>
@@ -40,30 +46,22 @@
             <h2>Our Philosophy</h2>
             <ul>
                 <li>
-                    <h3>
-                        <a href="">Strategy</a>
-                    </h3>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>
-                        <a href="">Punctuality</a>
-                    </h3>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>
-                        <a href="">Diligence</a>
-                    </h3>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>
-                        <a href="">Technologies</a>
-                    </h3>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
